name:                fol
version:             0.1.0.0
homepage:            https://github.com/zjhmale/fol
license:             BSD3
license-file:        LICENSE
author:              zjhmale
maintainer:          zjhmale@example.com
copyright:           2016 zjhmale
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ast
                     , Core
                     , Lexer
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , pretty
                     , array
  build-tools:         happy
                     , alex
  default-language:    Haskell2010

executable fol
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fol
                     , lens
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite fol-test
  type:                exitcode-stdio-1.0
  other-modules:       LexerSpec
                     , ParserSpec
                     , EvalSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fol
                     , hspec
                     , QuickCheck
                     , pretty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zjhmale/fol
